# gstwavnchenc

./: AUTHORS  ChangeLog  INSTALL  README  autogen.sh
src/: Makefile  Makefile.am  Makefile.in  gstwavnchenc.c  gstwavnchenc.h
